[package]
name = "rcan_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.6.1"
clap_derive = "4.6.1"
iroh = "0.97.0"
iroh-base = { version = "0.97.0", features = ["key"] }
irpc = "0.13.0"
irpc-iroh = "0.13.0"
n0-error = "0.1.3"
rcan = "0.3.0"
redb = { version = "4.1.0", features = ["uuid"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ed25519-dalek = { version = "3.0.0-pre.1" }
chrono = "0.4.44"
toml = "1.1.2"
rand = "0.9.2"
data-encoding = "2.11.0"
anyhow = "1.0.102"
n0-future = "0.3.2"
humantime = "2.3.0"
postcard = "1.1.3"
turso = "0.6.1"
toasty = { version = "0.7.0", features = ["serde", "turso"] }
reedline-repl-rs = { version = "1.3.0", features = ["async", "async_derive"] }
reedline = { version = "0.48.0", features = ["system_clipboard"] }
